# AdventOfCode2017

day1/: Makefile  day1.opam
day1/lib/: day1.ml
day1/lib/part1/: jbuild
day1/lib/part2/: jbuild  part2.byte  part2.ml  part2.opam
day1/test/: jbuild  test.ml
day2/: .gitignore  Cargo.toml  part1.rs  part2.rs
day3/: .merlin  part1.byte  part1.ml
day3/_build/: _digests  _log  part1.cmi  part1.cmo  part1.cmt  part1.ml  part1.ml.depends
day4/: .merlin  part2.ml  utils.ml
day4/_build/: _digests  _log  ocamlc.where  part1.cmi  part1.cmo  part1.cmt  part1.ml  part1.ml.depends  part2.cmi  part2.cmo  part2.cmt  part2.ml.depends  utils.cmi  utils.cmo  utils.cmt  utils.ml.depends
